# CodeMetadata

./: Cargo.toml  license.md  readme.md
src/: codemetadata.rs  command.rs  directory.rs  main.rs  table.rs
